force-app/main/default/objects/Pipeline_Point__c/Pipeline_Point__c.object-meta.xml
<CustomObject>
    <label>Pipeline Point</label>
    <nameField>
        <label>Pipeline Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>