force-app/main/default/objects/Pipeline_Point__c/fields/Commercial_Avg_Peak_Month__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Avg_Peak_Month__c</fullName>
    <description>Volume, in Dth, of the peak month&#39;s usage for Commercial customers in this PIN</description>
    <inlineHelpText>Volume, in Dth, of the peak month&#39;s usage for Commercial customers in this PIN</inlineHelpText>
    <label>Commercial Avg Peak Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>