force-app/main/default/objects/Pipeline_Point__c/fields/Commercial_Peak_Day__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Peak_Day__c</fullName>
    <description>Dth</description>
    <inlineHelpText>Dth</inlineHelpText>
    <label>Commercial Peak Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>