force-app/main/default/objects/Pipeline_Point__c/fields/Delivery_Zone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zone__c</fullName>
    <label>Delivery Zone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
                <default>true</default>
                <label>Central</label>
            </value>
            <value>
                <fullName>East North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>