force-app/main/default/objects/Pipeline_Point__c/fields/Industrial_Peak_Day_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Peak_Day_Capacity__c</fullName>
    <description>Actual MDQ for industrials in this pin, Dth</description>
    <inlineHelpText>Actual MDQ for industrials in this pin, Dth</inlineHelpText>
    <label>Industrial Peak Day Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>