force-app/main/default/objects/Pipeline_Point__c/fields/Per_Dth_Allocated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Per_Dth_Allocated_Cost__c</fullName>
    <formula>Total_demand_charge_for_Pin__c / (Total_Use__c/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Dth Allocated Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>