force-app/main/default/objects/Pipeline_Point__c/fields/Res_Avg_Peak_Month__c.field-meta.xml
<CustomField>
    <fullName>Res_Avg_Peak_Month__c</fullName>
    <description>For residential customers, the average of the two peak months&#39; volume (in Dth)</description>
    <inlineHelpText>For residential customers, the average of the two peak months&#39; volume (in Dth)</inlineHelpText>
    <label>Res Avg Peak Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>