force-app/main/default/objects/Pipeline_Point__c/fields/Residential_Capacity_Cost_per_Dth__c.field-meta.xml
<CustomField>
    <fullName>Residential_Capacity_Cost_per_Dth__c</fullName>
    <description>how much each peak month Dth of usage costs, in capacity charges</description>
    <formula>(Residential_Peak_Day__c/( Commercial_Peak_Day__c+  Residential_Peak_Day__c+  Industrial_Peak_Day_Capacity__c ) *  Total_demand_charge_for_Pin__c ) /  (Res_Avg_Peak_Month__c/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>how much each peak month Dth of usage costs, in capacity charges</inlineHelpText>
    <label>Residential Capacity Cost per Dth</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>