force-app/main/default/objects/Pipeline_Point__c/fields/SourceGas_Consolidated_Pin__c.field-meta.xml
<CustomField>
    <fullName>SourceGas_Consolidated_Pin__c</fullName>
    <externalId>true</externalId>
    <label>SourceGas Consolidated Pin</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>