force-app/main/default/objects/Pipeline_Point__c/fields/Total_demand_charge_for_Pin__c.field-meta.xml
<CustomField>
    <fullName>Total_demand_charge_for_Pin__c</fullName>
    <label>Total demand charge for Pin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>