force-app/main/default/objects/Pipeline_Point__c/fields/Total_Use__c.field-meta.xml
<CustomField>
    <fullName>Total_Use__c</fullName>
    <description>All therms used in this pin</description>
    <inlineHelpText>All therms used in this pin</inlineHelpText>
    <label>Total Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>